[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Speech Text/SpeechText.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/AnxietyMeter/AnxietyMeter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Rooms/Canteen.gd" type="Script" id=4]
[ext_resource path="res://assets/Canteen/canteen interior.png" type="Texture" id=5]
[ext_resource path="res://assets/Fonts/Smaller.tres" type="DynamicFont" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 159.137, 21.868 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.526, 50.0494 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.22766, 5.29675 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.8454, 8.6911 )

[sub_resource type="CircleShape2D" id=5]
radius = 8.05622

[sub_resource type="RectangleShape2D" id=6]

[node name="Canteen" type="Node2D"]
script = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="corridor (without door)" type="Sprite" parent="StaticBody2D"]
position = Vector2( 92.6864, 49.9547 )
scale = Vector2( 0.456737, 0.646846 )
texture = ExtResource( 5 )

[node name="TopLeft" type="CollisionPolygon2D" parent="StaticBody2D"]
scale = Vector2( 0.890059, 0.992668 )
polygon = PoolVector2Array( 0.207684, 97.5393, 15.3438, 65.1648, 359.559, 65.7345, 359.138, 0.831429, 0.207687, 0.415789 )

[node name="Bottom" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 162.88, 118.637 )
shape = SubResource( 1 )

[node name="Right" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 322.136, 76.0391 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 68.4779, 71.522 )
shape = SubResource( 3 )

[node name="Door1" type="Area2D" parent="."]
scale = Vector2( 0.890059, 0.992668 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door1"]
position = Vector2( 182.999, 67.0757 )
shape = SubResource( 4 )

[node name="Door2" type="Area2D" parent="."]
position = Vector2( 36, 0 )
scale = Vector2( 0.890059, 0.992668 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2"]
position = Vector2( 214.75, 67.0757 )
shape = SubResource( 4 )

[node name="Door3" type="Area2D" parent="."]
position = Vector2( 27, 0 )
scale = Vector2( 0.890059, 0.992668 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door3"]
position = Vector2( 297.529, 67.0757 )
shape = SubResource( 4 )

[node name="DoorDone" type="Control" parent="."]
margin_left = 143.002
margin_top = 44.0007
margin_right = 183.002
margin_bottom = 84.0007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DoorDone"]
margin_top = 2.18921
margin_right = 41.0
margin_bottom = 13.1892
rect_rotation = -18.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Label" parent="DoorDone"]
margin_left = 3.0
margin_top = 1.18921
margin_right = 39.0
margin_bottom = 11.1892
rect_rotation = -18.652
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
text = "Anxiety"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorDone2" type="Control" parent="."]
margin_left = 205.002
margin_top = 44.0007
margin_right = 245.002
margin_bottom = 84.0007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DoorDone2"]
margin_top = 2.18921
margin_right = 41.0
margin_bottom = 13.1892
rect_rotation = -18.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Label" parent="DoorDone2"]
margin_left = 3.0
margin_top = 1.18921
margin_right = 39.0
margin_bottom = 11.1892
rect_rotation = -18.652
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
text = "Anxiety"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorDone3" type="Control" parent="."]
margin_left = 270.002
margin_top = 44.0007
margin_right = 310.002
margin_bottom = 84.0007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="DoorDone3"]
margin_top = 2.18921
margin_right = 41.0
margin_bottom = 13.1892
rect_rotation = -18.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Label" parent="DoorDone3"]
margin_left = 3.0
margin_top = 1.18921
margin_right = 39.0
margin_bottom = 11.1892
rect_rotation = -18.652
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
text = "Anxiety"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 31.4818, 75.7965 )
scale = Vector2( 1.05674, 1.20685 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 3.78523, 2.66686 )
current = true
zoom = Vector2( 0.6, 0.9 )

[node name="AnxietyMeter" parent="Player/Camera2D" instance=ExtResource( 3 )]
margin_left = 11.8436
margin_top = -65.4721
margin_right = 11.8436
margin_bottom = -65.4721
rect_scale = Vector2( 0.261429, 0.298159 )

[node name="SpeechText" parent="Player/Camera2D" instance=ExtResource( 1 )]
margin_left = -89.5722
margin_top = 16.228
margin_right = -89.5722
margin_bottom = 16.228
rect_scale = Vector2( 0.56, 0.741 )

[node name="Banana" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Banana"]
position = Vector2( 59.0615, 76.0391 )
scale = Vector2( 0.45, 0.45 )
shape = SubResource( 5 )

[node name="NoodleStall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoodleStall"]
position = Vector2( 105.883, 59.0158 )
shape = SubResource( 6 )

[connection signal="area_entered" from="Banana" to="." method="_on_Banana_area_entered"]
[connection signal="area_entered" from="NoodleStall" to="." method="_on_NoodleStall_area_entered"]
